<resources>
    <string name="app_name">Pos</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">LANDI API Samples</string>

    <string name="message">Message</string>
    <string name="phone_number">Phone Numbers(Hosts)</string>

    <string name="pinpad">pinpad</string>
    <string name="mag_card_sample">Magnetic Card</string>
    <string name="contact_ic_card_sample">Contact IC Card</string>
    <string name="rf_card_sample">RF Card</string>
    <string name="printer_sample">Printer</string>
    <string name="serial_port_sample">Serial Port</string>
    <string name="cashbox_sample">Cash Box</string>
    <string name="inner_scanner_sample">Inner Scanner</string>
    <string name="scanner_sample">Scanner</string>
    <string name="modem_sample">Modem</string>
    <string name="pinpad_sample">Pinpad</string>
    <string name="input_pin_sample">InputPin</string>
    <string name="scan_decoder">Scan Decoder</string>
    <string name="search_mag_card">Search Card</string>
    <string name="search_mag_card_only_track2">Search Track2</string>
    <string name="search_mag_card_without_lrc_check">Search Card Without LRC Check</string>

    <string name="start_print">Start Print</string>
    <string name="add_title">Add Title</string>
    <string name="add_hello_world">Add Hello World</string>

    <string name="open_box">Open Box</string>
    <string name="install_lns">Install listener</string>
    <string name="uninstall_lns">Uninstall Listener</string>

    <string name="stop_search">Stop Search</string>
    <string name="read_psam">Read PSAM Card (SAM1)</string>
    <string name="search_and_read">Search Card And Read</string>
    <string name="search_up_card_and_read">Search UP Card/Mifare One Card And Read</string>
    <string name="emv_mode">EMV Mode</string>
    <string name="shb_mode">SHB Mode</string>
    <string name="bps192_mode">BPS 19200 Mode</string>
    <string name="vol3">3 VOL</string>
    <string name="vol5">5 VOL</string>
    <string name="vol18">1.8 VOL</string>

    <string name="powerup_parameter">Powerup Parameters</string>
    <string name="start_comm">Start Communication</string>
    <string name="abort">Abort</string>

    <string name="stop">Stop</string>
    <string name="start_scann">Start Scan</string>

    <string name="dial_up">Dial Up</string>
    <string name="dial_off">Dial Off</string>

    <string name="download_mainKey">Download MainKey</string>
    <string name="download_pinKey">Download PINKey</string>
    <string name="download_macKey">Download MACKey</string>
    <string name="download_tdKey">Download TDKey</string>
    <string name="calc_mac">Calculate MAC</string>
    <string name="encrypt_magTrack">Encrypt MagTrack</string>
    <string name="input_pin">Input PIN</string>
    <string name="tv_password">Password:</string>

    <string name="open_frontCamera">openFrontCamera</string>
    <string name="open_backCamera">openBackCamera</string>
    <string name="start_scan">start Scan</string>
    <string name="close_camera">closeCamera</string>
    <string name="TextView01">这里显示接受到服务器发来的信息</string>
    <string name="Button01">测试连接</string>
    <string name="EditText01">请输入内容</string>
    <string name="Bank_transaction">银行流水号:</string>
    <string name="PowerSupplyCode">供电所代码:</string>
    <string name="User_NO">户号:</string>
    <string name="User_Name">户名:</string>
    <string name="address">地址:</string>
    <string name="total_money">欠费总额:</string>
    <string name="buy_flag">是否可购电:</string>
    <string name="bill_mul">倍率:</string>
    <string name="price">电价:</string>
    <string name="ODD">累计金额:</string>
    <string name="clock">时间:</string>
    <string name="Card_NO">预购电卡卡号:</string>
    <string name="month">月份:</string>
    <string name="month_num">当月次数:</string>
    <string name="group_no">计量点号:</string>
    <string name="money">欠费金额:</string>
</resources>
